crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__alias_for_trivial_definition.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Alias(
        IrAlias {
            name: "Anything",
            doc: Some(
                "A free-form value",
            ),
            ty: Value,
        },
    ),
    Alias(
        IrAlias {
            name: "Root",
            doc: None,
            ty: Value,
        },
    ),
]
