crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__any_of_variants.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Enum(
        IrEnum {
            name: "Mixed",
            doc: None,
            variants: [
                IrVariant {
                    name: "OptA",
                    doc: None,
                    json_value: None,
                    ty: Some(
                        Named(
                            "OptA",
                        ),
                    ),
                },
                IrVariant {
                    name: "Variant1",
                    doc: None,
                    json_value: None,
                    ty: Some(
                        String,
                    ),
                },
            ],
            repr: TypedVariants,
        },
    ),
    Struct(
        IrStruct {
            name: "OptA",
            doc: None,
            fields: [
                IrField {
                    name: "val",
                    json_name: "val",
                    doc: None,
                    ty: I64,
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
    Alias(
        IrAlias {
            name: "Root",
            doc: None,
            ty: Value,
        },
    ),
]
