crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__array_with_items.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "tags",
                    json_name: "tags",
                    doc: None,
                    ty: Vec(
                        String,
                    ),
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
