crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__deny_unknown_fields.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Strict",
            doc: None,
            fields: [
                IrField {
                    name: "name",
                    json_name: "name",
                    doc: None,
                    ty: String,
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: true,
            is_all_of: false,
        },
    ),
]
