crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__deprecated_field.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "old_setting",
                    json_name: "old_setting",
                    doc: None,
                    ty: String,
                    required: false,
                    deprecated: true,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
