crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__multi_type_string_integer.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Enum(
        IrEnum {
            name: "ConfigValue",
            doc: None,
            variants: [
                IrVariant {
                    name: "String",
                    doc: None,
                    json_value: None,
                    ty: Some(
                        String,
                    ),
                },
                IrVariant {
                    name: "Integer",
                    doc: None,
                    json_value: None,
                    ty: Some(
                        I64,
                    ),
                },
            ],
            repr: MultiType,
        },
    ),
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "value",
                    json_name: "value",
                    doc: None,
                    ty: Named(
                        "ConfigValue",
                    ),
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
