crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__multi_type_string_null.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "maybe",
                    json_name: "maybe",
                    doc: None,
                    ty: Option(
                        String,
                    ),
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
